# solana-ua-bootcamp-2024-08-06

practice-1/rust-exercises/: .env  Cargo.toml
practice-1/rust-exercises/src/: main.rs
practice-2/rust_exerices/: Cargo.toml
practice-2/rust_exerices/src/: main.rs  token.rs
practice-2/ts_tasks/: .env  multisig-mint-tokens.ts  nonce-sign-transaction.ts  package-lock.json  package.json  pay_recipient.ts
practice-3/anchor_exercise/: Anchor.toml  package.json
practice-3/anchor_exercise/programs/approve/: Cargo.toml
practice-3/anchor_exercise/programs/approve/src/: lib.rs
practice-3/anchor_exercise/programs/approve/src/instructions/: make_offer.rs  take_offer.rs
practice-3/anchor_exercise/programs/approve/src/state/: mod.rs  offer.rs
practice-3/anchor_exercise/tests/: approve.test.ts  token.lib.ts  utils.lib.ts
